critique/static/critique/critique.css
/* ... */
#critique-search-results-list-m a {
    border-top-width: 2px;
    border-bottom-width: 2px;
    border-left-width: 4px;
    border-right-width: 4px; }
#critique-search-results-list a { padding: 6px 6px 4px 6px; }
#critique-search-results-list-m a { padding: 10px 9px 9px 9px; }
#critique-search-results-list li:first-child a { border-top-width: 2px; }
#critique-search-results-list-m li:first-child a { border-top-width: 4px; }
#critique-search-results-list li:last-child a { border-bottom-width: 2px; }
#critique-search-results-list-m li:last-child a { border-bottom-width: 4px; }

#critique-search-results-list a:focus,
#critique-search-results-list a:hover,
#critique-search-results-list-m a:focus,
#critique-search-results-list-m a:hover {
    z-index: 11;
    position: relative;
    outline: none; }
#critique-search-results-list.highlight-ok a:focus,
#critique-search-results-list.highlight-ok a:hover {
    padding-left: 7px;
    padding-right: 7px;
    box-shadow: 0 0 14px 0 rgba(0, 13, 181, 0.8);
    border-left-width: 1px; border-right-width: 1px; }
#critique-search-results-list-m.highlight-ok a:focus,
#critique-search-results-list-m.highlight-ok a:hover {
    box-shadow: inset 0 0 14px 0 rgba(0, 13, 181, 0.8); }
#critique-search-results-list.highlight-ok li:first-child a:focus,
#critique-search-results-list.highlight-ok li:first-child a:hover {
    margin-top: 1px;
    border-top-width: 1px; }
#critique-search-results-list.highlight-ok li:last-child a:focus,
#critique-search-results-list.highlight-ok li:first-child a:hover {
    border-bottom-width: 1px; }

#critique-search-results p, #critique-search-results-m p {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis; }
#critique-search-results a > p, #critique-search-results-m a > p {
    font-weight: bold;
    letter-spacing: -1px; }
#critique-search-results a > p { font-size: 22px; }
#critique-search-results-m a > p { font-size: 25px; }
#critique-search-results a > div, #critique-search-results-m a > div {
    width: 100%;
    padding-left: 1px;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-align: center;
    align-items: center;
    color: #737373; }
#critique-search-results a > div { margin-top: -1px; font-size: 16px; }
#critique-search-results-m a > div { margin-top: -5px; font-size: 18px; }
#critique-search-results a > div > p,
#critique-search-results-m a > div > p { display: inline; }
#critique-search-results a > div > p:first-child,
#critique-search-results-m a > div > p:first-child { -ms-flex: 1; flex: 1; }
_:-ms-input-placeholder, :root #critique-search-results a > div > p:first-child,
_:-ms-input-placeholder, :root #critique-search-results-m a > div > p:first-child { /* IE 10 */
    display: inline-block; }
#critique-search-results a > div > p:first-child { margin-right: 12px; }
#critique-search-results-m a > div > p:first-child { margin-right: 16px; }
#critique-search-results a > div > p:last-child,
#critique-search-results-m a > div > p:last-child { font-style: italic; }


/* Sub Navigation Bar
   ========================================================================== */

#sub-nav {
    line-height: 1.15;
    visibility: hidden;
    position: relative;
    overflow: hidden;
    font-size: 40px;
    transition: all 0.4s ease; }
#critique-header #sub-nav {
    height: 0;
    -ms-flex-direction: column;
    flex-direction: column;
    float: right;
    width: auto;
    box-shadow: 0 3px 13px 0px rgba(0, 0, 0, 0.23); }
#sub-nav.expanded { visibility: visible; }

#critique-header #sub-nav > #sub-nav-links-v { display: none; }
@media (max-width: 1380px) {
#critique-header #sub-nav > #sub-nav-links-v { display: -ms-flexbox; display: flex; } }

#critique-header #sub-nav.expanded { height: 46px; }
@media (max-width: 1380px) {
#critique-header #sub-nav.expanded { height: 160px; } }
@media (max-width: 950px) {
#critique-header #sub-nav.expanded { height: 266px; } }

#sub-nav-links-v {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-direction: column;
    flex-direction: column;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -ms-flex-align: end;
    align-items: flex-end;
    border: 1px solid #c1bd79;
    background-color: #fbf2bd;
    line-height: 1.3; }
#sub-nav-links-v li {
    width: 100%;
    height: 53px;
    border-bottom: 1px solid #deda99; }
#sub-nav-links-v li:last-child {
    height: 52px;
    border-bottom: none; }
#sub-nav-links-h li { padding: 0 42px; }
#sub-nav-links-v li a { padding: 0 42px; display: block; }


/* ==========================================================================
/* Content
/* ========================================================================== */

/* Content Assets
   ========================================================================== */

.critique-title {
    margin: 8px 0;
    font-family: AlegreyaSans, "Lucida Sans Unicode", "Lucida Grande", sans-serif;
    font-weight: bold;
    font-size: 34px;
    text-align: center;
    letter-spacing: -1px; }

.critique-info {
    width: 100%;
    font-family: AlegreyaSans, "Lucida Sans Unicode", "Lucida Grande", sans-serif;
    display: -ms-flexbox;
    display: flex;
    justify-content: center;
    align-items: stretch; }
.critique-info-text {
    margin: 10px 0;
    max-width: 480px;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-direction: column;
    flex-direction: column;
    -ms-flex-pack: center;
    justify-content: center; }

.critique-perso {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-direction: column;
    flex-direction: column;
    -ms-flex-align: center;
    align-items: center; }
.critique-perso .hentry {
    width: 100%;
    padding: 4px 4px 0 6px;
    max-width: 760px; }
@media (max-width: 700px) { .critique-perso .hentry { padding: 4px 23px 0 22.2px; } }
.critique-perso .hentry .entry-footer {
    padding-top: 0;
    padding-right: 20px;
    margin-bottom: 10px; }
/* ... */

